Changed favicon, random typo/wording changes, slightly more info here and there

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -32,18 +32,18 @@ re-leveling is more tedious than anything. Getting back to level 20 requires doi
 
 <br/><hr/>
 ## Limited Raising and Lives
-While in Forked Tower: Blood you a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
-After you die and then accept a raise, you will lose one stack of debuff or life (for simplicity, I will call them just lifes/lives from now on). When reaching 1 life, dying, and accepting another raise - your 
+While in Forked Tower: Blood a Resurrection Restricted debuff will be placed on participants. This debuff starts at three stacks and act as your "lives" while inside the Forked Tower.
+After you die and then accept a raise, you will lose one stack of debuff ( or "lifes/lives" here on). When reaching 1 life, dying, and accepting another raise - your 
 Ressurection Restricted will turn into a Ressurection Denied.
 
-From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp. Thus
-causing you to level down and grind back to KL20. Don't worry though, getting back to KL20 is just 2 FATEs and 1 CE away (or gold farming a little bit).
+From this point onwards, your next death is premanent. No method of raising can revive you and you are required to return out to Base Camp and causing you to level down. 
+Don't worry though, getting back to level 20 is just 1 CE away (or gold farming a little bit).
 
-With that, the methods in which you can be raised are also extremely limited. So far, there are only two methods in which you can be raised are
+The methods in which you can be raised are limited. So far, there are only two methods in which you can be raised are
 1. Phantom Chemist with the Raise ability (unlocked at level 3)
 2. Healer Limit Break 3.
 
-Both methods will consume 1 life and the healer limit break 3 does *__not__* circumvent the resurrection denied status.
+Both methods will consume 1 life and the healer limit break 3 does **_not_** circumvent the resurrection denied status.
 
 <br/><hr/>
 ## Required Phantom Jobs
@@ -92,7 +92,7 @@ Iainuki can also be used in the Hallways and Lockwards sections to have a 10% ch
 ### Alliance and Party Set Ups
 These lists are more catered to prog-type groups. If you are in reclears or speedrun modes you lists can and will look much more different than these.
 Ideally anyone who is not on a main role should be playing a DPS oriented phantom job to help make beating enrages easier.
-#### Absolutely Required
+#### Required
 You should have one of these in alliances ABC and 123 due to mechanics that split the raid into two alliances. Back ups are encouraged just in case one perma-dies in prog.
 - Phantom Thief (one per side)
 - Phantom Geomancer (one per side)
@@ -105,8 +105,8 @@ These are really, really nice to have to either reduce damage taken, increase th
 - Phantom Bard (one per party)
 - Phantom Chemist (one per party)
 - Phantom Ranger (one per side)
-- Phantom Dancer (x1)
-- Phantom Mystic Knight (x1)
+- Phantom Dancer (one per whole group)
+- Phantom Mystic Knight (one per whole group)
 #### If not assigned a key role...
 You should be playing Phantom Samurai. It is the easiest and most consistent source of damage due to Iainuki and Zeninage being so powerful.
 Phantom Monk is a strong DPS option too! However it suffers from having the 15y kick. If you play Phantom Monk please exercise large amounts of caution when pressing Phantom Kick.
@@ -114,14 +114,15 @@ Phantom Monk is a strong DPS option too! However it suffers from having the 15y 
 <br/><hr/>
 ## Preparing for Forked Tower: Blood
 Getting ready to enter Forked Tower: Blood requires you to complete a list of objectives before even considering entering the Forked Tower.
-1. Complete the "Past and Crescent" quest just past the point of completing the "Calamity Bound" Critical Engagement.
+1. Complete the "Past and Crescent" quest just past the point of completing the "Calamity Bound" Critical Encounter.
 2. Reach Knowledge Level 20
 3. Obtain a Sanguine Cipher(s) (purchased with either Silver or Gold pieces) from the Expedition Antiquarian
    - Everyone is **required** to offer a cipher to enter Forked Tower: Blood.
 4. Fully level (or "master") a few different Phantom Jobs to fully unlock their kits and gain a few stacks of Phantom Mastery.
+   - At a minimum you should master **one** phantom job before attempting Forked Tower.
 5. (Optional) Obtain a few pieces of Arcanaut's gear for your preferred role(s).
 
-For a list of phantom jobs to focus, please consult the image below.
+For a list of phantom jobs to focus on leveling, please consult the image below.
 <Image
     src="/ft/pJobFocusing_74.png"
     width="600"
@@ -139,38 +140,38 @@ For a list of phantom jobs to focus, please consult the image below.
 Forked Tower: Blood can only be entered during Auroral Mirages weather. These mirages are a brief 5 minute period in which the South Horn turns an eerie red and the Forked Tower is just barely visible in the North West
 corner of the area. Auroral Mirages appear in a random, yet predictable, manner.
 
-:::danger[Documenting the Crescent]
+:::danger[Documenting Occult Crescent]
 Most of this section is here to help document the mechanics of Forked Tower: Blood. While it *could* happen, spontaneous attempts forming in instance are extremely rare.
 
-If you are looking to seriously progress and clear Forked Tower on the N.A. datacenters, it is encouraged to join one of the many [Discords](/others/discords).
+If you are looking to seriously progress and clear Forked Tower on the N.A. data centers, it is encouraged to join one of the many [Discords](/others/discords) that put together groups.
 :::
 ### Forked Tower: Blood Spawn Mechanics
-Under the hood there is a hidden timer. In a fresh, **new instance this timer starts at 5 minutes**. In an existing instance, meaning the first Auroral Mirages has already passed, the timer begins at 60 minutes.
+Under the hood there is a hidden timer. In a fresh, **new instance this timer starts at 5 minutes**. In an existing instance, meaning the first Auroral Mirages has already passed, **the timer begins at 60 minutes** instead.
 This timer can also be reduced by completing FATEs and Critical Encounters. 
 - Completeing **FATEs (Pots included)** will reduce the timer by 1 minute.
 - Completeing **Critical Encounters** will reduce the timer by 5 minutes. 
 
-Once this timer has elapsed, a few more checks are made before the zone switches into Auroral Mirages and opening the Forked Tower for recruitment.
+Once this timer has elapsed, a few more checks are made before the zone switches into Auroral Mirages and opens Forked Tower for recruitment.
 1. There are at least 24 people of Knowledge Level 20 in the instance.
 2. There are at least 24 people with Forked Tower: Blood unlocked
    - This can be done by progressing past the "Past and Crescent" quest.
-3. There is no critical engagement currently recruiting or in progress.
+3. There are no critical engagement currently recruiting or in progress.
    - If you are in an pre-organized group, do not spawn any critical engagement as you will delay the tower spawning.
 
-If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until they are both met--which causes the mirages to spawn instantly.
+If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until they are all met--which causes the mirages to spawn instantly.
 
 ### How to get into Forked Tower: Blood
 - 24 unique players must offer Sanguine Ciphers to the reliquary during the Auroral Mirages weather. This weather window only lasts 5 minutes long so please be hasty about inputting your ciphers!
-  - If the 24 unique cipher minimum is met: the pad will glow even brighter and everyone on the pad, up to a total of 48 people who also offered ciphers, will be teleported into Forked Tower: Blood after roughly 30 more seconds.
-- If there are more than 48 ciphers offered, the people who offered enough ciphers to meet the "Offering Threshold" in the new Cipher UI will be guaranteed entry.
+  - **If the 24 unique cipher minimum is met at the 5 minute recruitment period**: the pad will glow even brighter and everyone on the pad, up to a total of 48 people who also offered ciphers, will be teleported into Forked Tower: Blood after roughly 30 more seconds.
+- If there are more than 48 ciphers offered, the people who offered enough ciphers to meet the "Offering Threshold" in the Cipher UI will be guaranteed entry.
   -  All other spots, if any remain, will be randomly selected from the people who offered any amount of ciphers.
-  - However, if less than 48 ciphers were offered, only those who offered ciphers will be allowed entry into Forked Tower. 
-- You *must* be on the teleporter pad when given the "Right of Entry" buff else you will not be teleported into the tower nor will you ciphers be refunded.
+  - However, if less than 48 ciphers were offered, only those who offered ciphers will be allowed entry into Forked Tower.
+- You *must* be on the pavillion when teleportation occurs when given the "Right of Entry" buff to enter the Forked Tower. Else, you will not be teleported into the tower nor will you cipher(s) be refunded.
 
 :::danger[Ciphers Required]
 Anyone wishing to enter Forked Tower: Blood **MUST** offer a Sanguine Cipher to the reliquary to be even considered for entry.
 
-No cipher, no entry.
+**No cipher, no entry**.
 :::
 
 ### How the Cipher UI Works
@@ -255,9 +256,9 @@ Also you can make spots free (allowing anyone of any job to join it) or complete
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
 ### Reminders Before Joining a Run
-Ideally you do these *before* joining the party finder but its always good to stress them again and again...
+Ideally you do these *before* joining a party finder but its always good to stress them again and again...
 1. **Make sure you are Knowledge Level 20!**
-   - You can confirm this by either talking to Jeffroy in the Phantom Village and asking to confirm level and currencies OR by entering the South Horn solo to check there instead. Both methods work as long as you confirm you are level
+   - You can confirm this by either talking to Jeffroy in the Phantom Village and asking to confirm level and currencies OR by entering the South Horn solo to check there instead. Both methods work as long as you confirm you are level 20.
 
 <Image
     src="/ft/jeff1.png"
@@ -287,11 +288,13 @@ Ideally you do these *before* joining the party finder but its always good to st
    - Food is for viatility and extra substats, tinctures is for your openers and other burst windows if allowed, and Arcanaut's gear is just a flat damage increase!
 
 ### Once Inside South Horn
-The group can feel free to do what they want until the weather changes into mirages--finding chests, getting ciphers, etc... Please just remind people to not die in awkward spots or avoid dying at all.
+The group can feel free to do what they want until the weather changes into mirages--finding chests, getting ciphers, etc... Please just remind people to not die in awkward spots or really just avoid dying at all.
 Now is also a great time to check for level 19s if any managed to slip by. You can easily do a mini-gold farm on level 27 mobs in the South West to quick bring them back to level 20 if desired.
 
 :::danger[Ciphers Required]
-**Everyone wishing to participate in Forked Tower is required to input a cipher to the reliquary to even be given the chance to enter Forked Tower.** There is no more tax evasion or free rides.
+**Everyone wishing to participate in Forked Tower is required to input a cipher to the reliquary to even be given the chance to enter Forked Tower.** 
+
+There is no more tax evasion or free rides. No cipher, no entry.
 :::
 
 :::note[Periodically Check Cipher Statuses]
