--- a/src/content/docs/crescent/gearing.mdx
+++ b/src/content/docs/crescent/gearing.mdx
@@ -138,10 +138,12 @@ If you do not have a piece of Occult gear for a specific gear slot, fill it with
 **True best in slot is wearing full Arcanaut's+2 and all 5 unique accessories for a total of +840 main stat and +21 special attribute.**
 
 ### Weapons
-Phantom Weapons are generally the safest pick! They will often provide capped desireable substats at ilvl 700. There are some cases where another weapon may be better, 
-but these differences are so minimal that its not worth worrying. **A good rule of thumbs is to use the highest ilvl weapon with desirable stats.**
+Phantom Weapons are generally the safest pick! They provide capped desireable substats at ilvl 700. There are some cases where another weapon may be better, 
+but these differences are so minimal that its not worth worrying over. **A good rule of thumbs is to use the highest ilvl weapon with desirable stats.**
 
+:::note[Special Attribute Weapons?]
 There are currently no weapons with the Special Attribute on them.
+:::
 
 ### Foods and Tinctures 
 Both work in Occult Crescent! The current raid tier's consumables for your job/role. (e.g. 7.4 is Caramel Popcorn and Grade 4 Gemdraught). Note: Tinctures/Gemdraughts do not increase phantom action damage.
