--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -66,6 +66,13 @@ Knowledge level currently caps at 20 and affects the following things:
 
 If you wish to chain but your party member's levels are uneven, the party leader can choose to sync everyone's levels; allow chaining to be possible.
 
+:::danger[Incapacitation Penality]
+If you are above level 5, dying and returning or leaving the instance without being revived or will cause a loss in knowledge level exp. Your knowledge
+level can decrease this way. The amount of knowledge exp lost is based on your level.
+
+Always shout for a raise if you can!
+:::
+
 #### Knowledge Level v. Mob Level - Damage Taken/Recieved
 Below is a chart that goes over how much damage you take and do to mobs of a certain level above your own as well as how that correlates to party size.
 <div style="display:flex; justify-content: center;">
@@ -88,7 +95,7 @@ Below is a chart that goes over how much damage you take and do to mobs of a cer
 </div>
 
 ### Phantom Job Level
-Next is your <u>Phantom Job Level</u> which is specific to the phantom job you currently have equipped. Phantom Job experience can be earned from completing
+<u>Phantom Job Level</u> is specific to the phantom job you currently have equipped. Phantom job experience can be earned from completing
 FATEs, Critical Engagements, and chaining together mob kills at or above your or your party's overall level.
 
 Leveling phantom jobs will not only unlock or upgrade your phantom actions but fully leveling, or "mastering", a phantom job will grant you a stacking mastery bonus for every mastered
