Added indepth, fix typos, update home page

--- a/src/content/docs/crescent/ftb_encs.mdx
+++ b/src/content/docs/crescent/ftb_encs.mdx
@@ -10,8 +10,10 @@ import { Icon } from '@astrojs/starlight/components';
 import { Image } from 'astro:assets';
 import Footer from '@components/Footer.astro'
 
+:::note[GSlides v. Raidplan]
 All guides linked below will feature the same strats, just with a different presentation and/or slightly different explainations. Both will result in the same outcomes when resolved.
 These strats are all used by the featured N.A. Discords linked [here](/others/discords)
+:::
 
 ## General Encounter Resources
 - <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
