--- a/src/content/docs/crescent/gearing.mdx
+++ b/src/content/docs/crescent/gearing.mdx
@@ -150,7 +150,7 @@ Both work in Occult Crescent! The current raid tier's consumables for your job/r
 
 ### What about Neo Kingdom?
 Since occult gear now occupies every slot except for weapons and due to how powerful the gear's bonuses are, Neo Kingdom gear has been made irrelevant. If you're still working on getting your occult gear, 
-neo kingdom can help you can small fractions \(\<1\%\) of damage gain, but its easier to just bring in the highest ilvl pieces with your role's preferred stats.
+neo kingdom can help you gain marginally small fractions \(\<1\%\) of damage gain, but its easier to just bring in the highest ilvl pieces with your role's preferred stats.
 
 :::tip[Tuning your GCD Speed]
 If you want to prioritize a comfortable GCD speed, that is your choice. Feel free to use https://xivgear.app/ to make your own set(s) for comfort.
