--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -9,10 +9,11 @@ import Footer from "@components/Footer.astro";
 <html class="sl-theme-dark">
     <body>
     <div class="index-content">
-        <sl-card style="display:flex;justify-content:center" class="card-basic">
-            <p>This website was created to be an easy-to-access library of all the current Foray-related content in the NA FFXIV Community. Currently, 
-            only Delubrum Savage is supported and being maintained. Once the Dawntrail field operation comes out, it will be slowly updated with content and strats as they appear.</p>
-        </sl-card>
+            <p>This website was created to be an easy-to-access library of all the current Foray-related content in the NA FFXIV Community.</p>
+         
+            <p>Currently, only Delubrum Savage and Occult Crescent are supported and being maintained.</p>
+
+            <p>See something missing? Mistakes? Feedback/PRs welcome.</p>
         <h2 style="display:flex;justify-content:center">Field Operations</h2>
         <div style="display:flex;justify-content:center" class="multi-button">
             <div>
