Fix broken links

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -109,7 +109,7 @@ of gear.
 Arcanaut's gear is purchased with silver and occult accessories can be rarely found when completeting critical encounters, opening coffers,
 finding gold pot chests, and fortune carrot chests.
 
-To read more about gearing, please [visit the page all about gearing](gearing)
+To read more about gearing, please [visit the page all about gearing](/crescent/gearing)
 
 <br/><hr/>
 ## FATEs and CEs
@@ -185,7 +185,7 @@ Map showcases all possible spawn locations for the 8 silvers and 60 bronze locat
 
 
 ### Coffer Farming Routes
-For pre-made farming routes in South Horn, you can visit the [South Horn page's chest farming section](southhorn).
+For pre-made farming routes in South Horn, you can visit the [South Horn page's chest farming section](/crescent/southhorn#chest-farming).
 
 
 <br/><hr/>
