Added macros to pjobs, chemist cheesing, note about marking players before entry

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -302,3 +302,11 @@ You should check every so often to ensure people have put their ciphers in. The 
 
 You can see the number of people in your instance through the adventurer list UI.
 :::
+
+### Marking Important Players
+Each party can use head signs (head markings) to mark important players. This is good for especially phantom chemists so they can recognize each other in the case one dies or
+a wipe is happening and you need to chemist cheese to allow another pull.
+
+Commonly it's suggested to
+- Mark chemists with attack 1-8
+- Mark thiefs and/or rangers for your alliance with an ignore 1-2
