--- a/src/content/docs/crescent/ftb_encs.mdx
+++ b/src/content/docs/crescent/ftb_encs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Forked Tower: Blood"
+title: "Encounter Guides"
 description: "Forked Tower: Blood Resources"
 tableOfContents:
   minHeadingLevel: 2
@@ -16,11 +16,25 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 :::
 
 ## General Encounter Resources
+### Timelines and Mitigation Sheets
 - <a href="https://docs.google.com/spreadsheets/d/1Nb4pnAjHg06r7zR3bJEUaZ7gwcX4nue0YIuybVdvpVk" target="_blank">**Fight Timelines**</a>
 - <a href="https://docs.google.com/spreadsheets/d/1UlbGYBrhVn4L1isfcVACOqLlYclHeP9Zazj6PfM3Y8U" target="_blank">**Tank Mitigation**</a> (includes pKnight, Non-pKnight, Berserker)
 - <a href="https://docs.google.com/spreadsheets/d/1wHcHBrO41f7BNaJmRCqxGwdv9bldhb-4m2YfcVWWzbM" target="_blank">**Healer Mitigation**</a> (include pBard timings)
-<br/><hr/>
 
+### Chemist Cheesing
+Sometimes you wipe, it happens. What's important is setting up a Chemist Cheese so you can give your group another attempt at whatever boss you're currently on. To perform this 2 chemists must do the following:
+1. Any Chemist purposefully dies, either by mechanics or jumping into a death wall.
+2. Another Chemist gives that dead Chemist a raise. The dead chemist will hold the raise until the boss resets completely.
+   - Try to cast raise near the enterance of the arena! The raise position is deteremined where the raise-giver was standing. So having the raise-caster be out of a boss's pull range will make raising safer later.
+3. After the raise is confirmed on the dead chemist, everyone will quickly wipe. Either by jumping in the wall or otherwise dying.
+4. After the boss completely resets, the dead chemist will revive.
+5. The now alive chemist will raise everyone outside of the boss's pull range.
+6. Wait for weaknesses to fall off and pull again!
+
+This can also be useful for stopping some folks for re-leveling. Sometimes there's just not enough people for another attempt so raising as many people as possible then just `/return`-ing out can
+save on re-leveling time.
+
+<br/><hr/>
 ## Demon Tablet
 - <a href="https://raidplan.io/plan/7Y88dbybDIm5wgTs" target="_blank">**Raidplan**</a>
 - <a href="https://docs.google.com/presentation/d/12fRuTLrDoIDrQBVBkg2s3Nrd1NpwOjMxFPlbfikGiz0/edit?slide=id.p#slide=id.p" target="_blank">**Google Slides**</a>
@@ -51,6 +65,7 @@ These strats are all used by the featured N.A. Discords linked [here](/others/di
 
 ## Hallways
 - <a href="https://docs.google.com/presentation/d/1FB06sUFYWn3gKa1x61r1i4faTEzK5OgBFHsDo8lYakA/present#slide=id.p" target="_blank">**Google Slides**</a>
+   - <a href="https://youtu.be/qq0eRaUHNoc" target="_blank">Hidden Thief Room Example</a>
 :::danger[*Be Careful of Traps, Thieves, and Rangers*]
 During this section of Forked Tower you should always be far behind your Thieves and Rangers as they scout ahead to precept/remove traps. 
 If you stand to close to any of these things, you risk dying. Do not waste your valuable lives.
@@ -224,5 +239,3 @@ If you stand to close to any of these things, you risk dying. Do not waste your 
 </details>
 
 <br></br>
-
-
