--- a/src/content/docs/crescent/ftb_pjobs.mdx
+++ b/src/content/docs/crescent/ftb_pjobs.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Forked Tower: Blood"
+title: "In-depth Phantom Job Guides"
 description: "Forked Tower: Blood Resources"
 tableOfContents:
   minHeadingLevel: 2
@@ -13,38 +13,104 @@ import Footer from '@components/Footer.astro'
 This page is dedicated to showcasing in-depth phantom job guides written by various authors through out the N.A. community. 
 These are both for learning, easing more people into the role, and further optimization of those said roles.
 
+Some phantom jobs have macros below with placeholders already set up. If needed, you can modify the placeholder (eg. `<bind1>` and `<f>`) with the following depending on your needs.
+If you want a full list of placeholders please visit the <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/text_command/placeholder/" target="_blank">Eorzea Database page for them.</a>
+- `<f>` for a focused target
+- `<bind1>` for a character marked with the Bind 1 head marker
+- `<attack1>` for a character marked with the Attack 1 head marker
+- `<stop1>` for a character marked with the Ignore 1 head marker
+- `<cross>` for a character marked with the Cross/Plus head marker
+- `<1-8>` for someone in your party.
+- `<tt>` for the target of your current target.
+
+<br/><hr/>
 ## Geomancer
 #### Battle Bell and You: How to Help Your Geomancer Feel Useful
 By Mortia Starfallgirl. Contains timings on when to take damage or strategic thrice come ruins to maintain Battle Bell's damage buff.
 - <a href="https://docs.google.com/spreadsheets/d/1k2eIlDWksPi_fTXIRRlCzeAm2m9GewHqFpnShlOgg1Q/edit?usp=sharing" target="_blank">LINK TO GUIDE</a>
 
+### Macros
+Helpful macro templates to maintain bells on two people. It will remind you when to use the next Battle Bell so you
+can maintain 100% uptime. Useful to put on for Main Tanks and Berserkers.
+
+**First Bell Target**
+```
+/gaction "Phantom Action I" <bind1>
+/gaction "Phantom Action I" <bind1>
+/gaction "Phantom Action I" <bind1>
+/gaction "Phantom Action I" <bind1>
+/e Bell given to <bind1> (macro 1). <wait.30>
+/e Use Bell Macro 2 next. <se.2>
+/micon "Phantom Action I" general
+```
+
+**Second Bell Target**
+```
+/gaction "Phantom Action I" <bind2>
+/gaction "Phantom Action I" <bind2>
+/gaction "Phantom Action I" <bind2>
+/gaction "Phantom Action I" <bind2>
+/e Bell given to <bind2>(macro 2). <wait.30>
+/e Use Bell Macro 1 next. <se.2>
+/micon "Phantom Action I" general
+```
+
+<br/><hr/>
 ## Thief/Ranger
 #### Hurry Up and Wait! The Thief's Guide to Precepting
 By Mortia Starfallgirl and Rhikie Luce. This guide also doubles up as a useful phantom ranger guide.
 
 - <a href="https://docs.google.com/document/d/1Z5vZlxHuv6v2zSyXLXJnkA7lLL1YIUv6r5Xt6qXh9ic/edit?tab=t.0#heading=h.xlr7hivfpp9x" target="_blank">LINK TO GUIDE</a>
 
+<br/><hr/>
 ## Oracle
 #### The Oracle's Guide to (Safely) Starfalling Yourself 
 By Zrefin Elderberry. Contains useful timings for safely using Starfall as well as Rejuvination timings.
 
 - <a href="https://docs.google.com/spreadsheets/d/1SJXdA36aZoYDlP3EED2ytmF33rvhABdUPLS377wRHRE/edit?gid=0#gid=0" target="_blank">LINK TO GUIDE</a>
 
+### Macros
+
+Oracle Invulnerability Macro. Amazing for Berserkers.
+```
+/merror off
+/gaction "Phantom Action V" <stop1>
+/gaction "Phantom Action V" <stop1>
+/gaction "Phantom Action V" <stop1>
+/gaction "Phantom Action V" <stop1>
+/micon "Phantom Action V"
+```
+
+<br/><hr/>
 ## Berserker
 #### Deadly Blowmaxxing: Your Life (and Deaths) as a Berserker
 By Mortia Starfallgirl and Ruby Kha. Contains varying levels of Berserker optimization starting from the basics all the way to speed kills.
 
 - <a href="https://docs.google.com/spreadsheets/d/1_w3qAdhK1dkgA3TV5g58ImQbbiWsh547Lyje0sz9tCQ/edit?usp=sharing" target="_blank">LINK TO GUIDE</a>
 
+<br/><hr/>
 ## Monk
 #### p-MNK-eying Around: Your Guide to Ethical Inting with Phantom Kick
 by Mortia Starfallgirl. Contains proper (sometimes unethical) timings on when use to use phantom kick to maintain full uptime.
 
 - <a href="https://docs.google.com/document/d/14ISoQu7l6ppmMnFiA_gplOa7B5VjqnM-zktn0bPKZe0/edit?tab=t.0#heading=h.w8c8exu848bi" target="_blank">LINK TO GUIDE</a>
 
-
+<br/><hr/>
 ## Gladiator
 #### A Primer to Phantom Gladiator
 by Mortia Starfallgirl. Contains damage theorycrafting and Defend timings to maximize damage on Finisher.
 
 - <a href="https://docs.google.com/document/d/1GD4x7JLn8xIN419E-E7MC4F7rWdTo4iH1heGWwQkoYk/edit?usp=sharing" target="_blank">LINK TO GUIDE</a>
+
+<br/><hr/>
+## Other pJobs with Macros
+### Knight
+Pledging your co-tank
+```
+/merror off
+/gaction "Phantom Action IV" <2>
+/gaction "Phantom Action IV" <2>
+/gaction "Phantom Action IV" <2>
+/gaction "Phantom Action IV" <2>
+/micon "Phantom Action IV"
+```
