random bolding i guess

--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -52,21 +52,21 @@ your experience much easier. In no particular order the following phantom jobs a
 <details>
 <summary>List and Explanation of Useful Phantom Jobs</summary>
 - **Phantom Time Mage**:
-A required phantom job to complete Forked Tower: Blood. Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
+**A required phantom job to complete Forked Tower:** Blood. Needed for dispelling specific adds at Demon Tablet, Bridges, and Lockwards. Can also slow a majority of adds throughout Forked Tower.
 
 - **Phantom Geomancer**:
-A required phantom job to complete Forked Tower: Blood. Uses Levitate to walk over hazards during Hallways and the Bridges encounter.
+**A required phantom job to complete Forked Tower:** Blood. Uses Levitate to walk over hazards during Hallways and the Bridges encounter.
 
 - **Phantom Bard**:
-A required phantom job to complete Forked Tower: Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. If left unstunned,
+**A required phantom job to complete Forked Tower:** Blood. Helps increase a party's damage but noteably uses Romeo's Ballad to stun the Tower Idols during the Bridges encounter. If left unstunned,
 the Idols will instantly wipe the group.
 
 - **Phantom Thief**:
-A required phantom job to complete Forked Tower: Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite. Also uses
+**A required phantom job to complete Forked Tower:** Blood. Percepts hidden traps and opens locked/hidden passages to help the group earn more Sanguinite. Also uses
 Pilfer Weapon to remove a buff off an enemy during Lockwards.
 
 - **Phantom Berserker**:
-A required phantom job to complete Forked Tower: Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
+**A required phantom job to complete Forked Tower:** Blood. Used at Magitaur to kill the purple canister with their Rage ability to avoid being afflicted with Hysteria for 60 seconds.
 
 - **Phantom Chemist**:
 This is your only method of raising outside of Healer Limit Break 3. Progression groups are reccomended to bring a LOT of these for safety.
