--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -310,3 +310,4 @@ a wipe is happening and you need to chemist cheese to allow another pull.
 Commonly it's suggested to
 - Mark chemists with attack 1-8
 - Mark thiefs and/or rangers for your alliance with an ignore 1-2
+- Mark Bell Targets (main tanks, berserkers) with a bind 1-3
