--- a/src/content/docs/crescent/ftb_pjobs.mdx
+++ b/src/content/docs/crescent/ftb_pjobs.mdx
@@ -74,10 +74,10 @@ By Zrefin Elderberry. Contains useful timings for safely using Starfall as well 
 Oracle Invulnerability Macro. Amazing for Berserkers.
 ```
 /merror off
-/gaction "Phantom Action V" <stop1>
-/gaction "Phantom Action V" <stop1>
-/gaction "Phantom Action V" <stop1>
-/gaction "Phantom Action V" <stop1>
+/gaction "Phantom Action V" <bind1>
+/gaction "Phantom Action V" <bind1>
+/gaction "Phantom Action V" <bind1>
+/gaction "Phantom Action V" <bind1>
 /micon "Phantom Action V"
 ```
 
@@ -104,6 +104,8 @@ by Mortia Starfallgirl. Contains damage theorycrafting and Defend timings to max
 
 <br/><hr/>
 ## Other pJobs with Macros
+These phantom jobs do not have dedicated guides to them, but still have popular macros that see use in both progression and reclears.
+
 ### Knight
 Pledging your co-tank
 ```
@@ -113,4 +115,25 @@ Pledging your co-tank
 /gaction "Phantom Action IV" <2>
 /gaction "Phantom Action IV" <2>
 /micon "Phantom Action IV"
+```
+
+### Chemist
+Potion Throwing (the healing one)
+```
+/merror off
+/gaction "Phantom Action I" <mo>
+/gaction "Phantom Action I" <mo>
+/gaction "Phantom Action I" <mo>
+/gaction "Phantom Action I" <mo>
+/micon "Phantom Action I"
+```
+
+Ether Throwing (the MP one)
+```
+/merror off
+/gaction "Phantom Action II" <mo>
+/gaction "Phantom Action II" <mo>
+/gaction "Phantom Action II" <mo>
+/gaction "Phantom Action II" <mo>
+/micon "Phantom Action I"
 ```
