--- a/src/content/docs/crescent/pjobs.mdx
+++ b/src/content/docs/crescent/pjobs.mdx
@@ -64,11 +64,12 @@ by one person. There is a chart of the current phantom actions and which ones sh
 />
 <p style="text-align:center; margin-top: 0;">(Click to expand in new window)</p>
 
-### Setting Up Macros
+### Macroing Phantom Actions
 Some phantom jobs have useful macros attached to make it easier to use their skills. To macro phantom actions you can use `/gaction "Phantom Action I"`. Replacing `I` with `I, II, III, IV, V` depending 
 on which slot the phantom action takes. You can also set up placeholders in the macros to help make targeting specific players easier.
 
-If you want a full list of placeholders please visit the <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/text_command/placeholder/" target="_blank">Eorzea Database page for them.</a>
+If you want a full list of placeholders please visit the <a href="https://na.finalfantasyxiv.com/lodestone/playguide/db/text_command/placeholder/" target="_blank">Eorzea Database page for them.</a> Here are a 
+few quick examples for you:
 - `<f>` for a focused target
 - `<bind1>` for a character marked with the Bind 1 head marker
 - `<attack1>` for a character marked with the Attack 1 head marker
@@ -76,6 +77,8 @@ If you want a full list of placeholders please visit the <a href="https://na.fin
 - `<cross>` for a character marked with the Cross/Plus head marker
 - `<1-8>` for someone in your party.
 - `<tt>` for the target of your current target.
+
+If you want pre-made macros, you can visit the [in-depth phantom job guides](/crescent/ftb_pjobs) page for examples.
 
 ## Phantom Jobs
 Currently there are 15 different Phantom Jobs that the player can obtain and level. By default, everyone starts as a Phantom Freelancer and unlocks Knight, Bard, and Monk almost immediately while progressing the Occult Crescent MSQ.
