--- a/src/content/docs/crescent/ftb.mdx
+++ b/src/content/docs/crescent/ftb.mdx
@@ -147,22 +147,24 @@ If you are looking to seriously progress and clear Forked Tower on the N.A. data
 :::
 ### Forked Tower: Blood Spawn Mechanics
 Under the hood there is a hidden timer. In a fresh, **new instance this timer starts at 5 minutes**. In an existing instance, meaning the first Auroral Mirages has already passed, **the timer begins at 60 minutes** instead.
+This will slowly tick down until zero and then check for some extra conditions to be met. If met, mirages will appear and Forked Tower will open for recruitment.
 This timer can also be reduced by completing FATEs and Critical Encounters. 
 - Completeing **FATEs (Pots included)** will reduce the timer by 1 minute.
 - Completeing **Critical Encounters** will reduce the timer by 5 minutes. 
 
-Once this timer has elapsed, a few more checks are made before the zone switches into Auroral Mirages and opens Forked Tower for recruitment.
+Once this timer has elapsed, a few more checks are made before the zone switches into Auroral Mirages.
 1. There are at least 24 people of Knowledge Level 20 in the instance.
 2. There are at least 24 people with Forked Tower: Blood unlocked
    - This can be done by progressing past the "Past and Crescent" quest.
 3. There are no critical engagement currently recruiting or in progress.
    - If you are in an pre-organized group, do not spawn any critical engagement as you will delay the tower spawning.
 
-If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until they are all met--which causes the mirages to spawn instantly.
+If these three conditions are **NOT** met, the timer will 'pause' in its elapsed state until the conditions are all met--which causes the mirages to spawn instantly.
 
 ### How to get into Forked Tower: Blood
-- 24 unique players must offer Sanguine Ciphers to the reliquary during the Auroral Mirages weather. This weather window only lasts 5 minutes long so please be hasty about inputting your ciphers!
-  - **If the 24 unique cipher minimum is met at the 5 minute recruitment period**: the pad will glow even brighter and everyone on the pad, up to a total of 48 people who also offered ciphers, will be teleported into Forked Tower: Blood after roughly 30 more seconds.
+24 unique players must offer Sanguine Ciphers to the reliquary during the Auroral Mirages weather. This weather window only lasts 5 minutes long so please be hasty about inputting your ciphers!
+
+- **If the 24 unique cipher minimum is met at the 5 minute recruitment period**: the pad will glow even brighter and everyone on the pad, up to a total of 48 people who also offered ciphers, will be teleported into Forked Tower: Blood after roughly 30 more seconds.
 - If there are more than 48 ciphers offered, the people who offered enough ciphers to meet the "Offering Threshold" in the Cipher UI will be guaranteed entry.
   -  All other spots, if any remain, will be randomly selected from the people who offered any amount of ciphers.
   - However, if less than 48 ciphers were offered, only those who offered ciphers will be allowed entry into Forked Tower.
