Added a note about kill credit

--- a/src/content/docs/crescent/occult.mdx
+++ b/src/content/docs/crescent/occult.mdx
@@ -144,6 +144,10 @@ improving the higher your chain goes. Currently, to chain mobs you must kill mob
 | 7-8           | 7-8 levels above |
 </div>
 
+:::tip[Mob Credit]
+Kill credit and rewards for mobs is only given to the party/person who attacks or aggros the mob first. 
+:::
+
 <br/><hr/>
 ## Treasure Coffers
 Around Occult Crescent you will find randomly coffers spread around the Occult Crescent. These coffers come in two varities: Bronze and Silver. 
