--- a/src/content/docs/crescent/southhorn.mdx
+++ b/src/content/docs/crescent/southhorn.mdx
@@ -26,6 +26,10 @@ You can find a non-exhaustive list of mobs along with their aggro type and resis
 spreadsheet maintained by Wobl.
 - Do It Doom: https://docs.google.com/spreadsheets/d/1oWuDtRxYUsVo2HxzvUecnzXpyRo1ozxuw_s6Lr2gepU/edit?gid=2005261057#gid=2005261057
 
+:::tip[Mob Credit]
+Kill credit and rewards for mobs is only given to the party/person who attacks or aggros the mob first. 
+:::
+
 ### Mob Level Map
 Map that shows which region contains which level of mobs. Can be useful when trying to find an area to chain.
 <Image
@@ -245,12 +249,20 @@ Every successful FATE you complete with a **gold** rating will reward the follow
 
 <br/><hr/>
 ## Gold Farming
-Gold farming is primarily done with the use of thief tanks, thief sages, and cannoneers to kill groups of high level mobs before they overwhelm the group. Most groups tend to use the top floor of The Abanonded Ascent tower located in the
+Gold farming is primarily done with the use of thief tanks, thief sages, and cannoneers to kill groups of high level mobs before they overwhelm the group. 
+Most groups tend to use the top floor of The Abanonded Ascent tower located in the
 bottom left (South West) corner of the map. They would go in circles gathering and killing the Isleblazers and Zirnitras until satisfied. 
+
+If you are solo, you can loop the Crescent Aetherscabs and Tarus mobs in the Crystallized Caverns or the Crescent Fopers on the ramp at (X: 9.3, Y: 15.7). Both zones use either 
+warrior/paladin on cannoneer or oracle to effectively kill the pack of mobs.
 
 You can read more about gold farming in the following Google doc: 
 <a href="https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0" target="_blank">Actually Good Guides to Gold Farming</a>. The guide contains both solo and group farming guides.
 - Actually Good Guides to Gold Farming: https://docs.google.com/document/d/1wlCr6ZTR_lnZhbO_1GmpC6oS9K2gaz2GKNJv8dV3zeI/edit?tab=t.39eab4nqlnk0
+
+:::tip[Mob Credit]
+Kill credit and rewards for mobs is only given to the party/person who attacks or aggros the mob first. 
+:::
 
 <br/><hr/>
 ## Chest Farming
